namespace MVC_ArchitectureProject.Models
{
    public class CardRechargeModel
    {
        public int CardId { get; set; }
        public double Amount { get; set; }
    }
}
