namespace MVC_ArchitectureProject.Models
{
    public class TransactionM
    {
        public string Username { get; set; }
        public double Amount { get; set; }
    }
}
